[gd_scene load_steps=6 format=2]

[ext_resource path="res://global/loading_screen.gd" type="Script" id=1]
[ext_resource path="res://themes/theme_u_main.tres" type="Theme" id=2]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/logo_typo_white.png-a7c2b5349f420dd1b9791b41a3d66c88.stex"

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.219608, 0.607843, 0.196078, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.219608, 0.607843, 0.196078, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.219608, 0.607843, 0.196078, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.219608, 0.607843, 0.196078, 0 )

[node name="LoadingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foreground" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Foreground"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
theme = ExtResource( 2 )
custom_constants/margin_right = 150
custom_constants/margin_top = 50
custom_constants/margin_left = 150
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Foreground/MarginContainer"]
margin_left = 150.0
margin_top = 50.0
margin_right = 1957.0
margin_bottom = 1030.0
grow_horizontal = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Foreground/MarginContainer/VBoxContainer"]
margin_right = 1807.0
margin_bottom = 522.0
size_flags_vertical = 3
texture = SubResource( 1 )
expand = true
stretch_mode = 6

[node name="Control" type="Control" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 526.0
margin_right = 1807.0
margin_bottom = 576.0
rect_min_size = Vector2( 0, 50 )

[node name="Resources" type="PanelContainer" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 580.0
margin_right = 1807.0
margin_bottom = 741.0

[node name="ResourceLoading" type="VBoxContainer" parent="Foreground/MarginContainer/VBoxContainer/Resources"]
margin_left = 3.0
margin_top = 2.0
margin_right = 1804.0
margin_bottom = 159.0

[node name="Label" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Resources/ResourceLoading"]
margin_right = 1801.0
margin_bottom = 19.0
text = "global.loading.loading"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Foreground/MarginContainer/VBoxContainer/Resources/ResourceLoading"]
margin_top = 23.0
margin_right = 1801.0
margin_bottom = 43.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2

[node name="GlobalProgress" type="ProgressBar" parent="Foreground/MarginContainer/VBoxContainer/Resources/ResourceLoading"]
margin_top = 47.0
margin_right = 1801.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 30 )
custom_styles/fg = SubResource( 2 )
max_value = 1.0
percent_visible = false

[node name="Label" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Resources/ResourceLoading/GlobalProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "0 / 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingComponent" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Resources/ResourceLoading"]
margin_top = 81.0
margin_right = 1801.0
margin_bottom = 100.0
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="Foreground/MarginContainer/VBoxContainer/Resources/ResourceLoading"]
margin_top = 104.0
margin_right = 1801.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 30 )
custom_styles/fg = SubResource( 3 )
max_value = 1.0
step = 0.001
percent_visible = false

[node name="Label" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Resources/ResourceLoading/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "0 / 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingError" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Resources/ResourceLoading"]
margin_top = 138.0
margin_right = 1801.0
margin_bottom = 157.0
custom_colors/font_color = Color( 0.74902, 0.243137, 0.196078, 1 )
align = 1
valign = 1

[node name="Control2" type="Control" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 745.0
margin_right = 1807.0
margin_bottom = 795.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 1

[node name="Network" type="PanelContainer" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 799.0
margin_right = 1807.0
margin_bottom = 845.0

[node name="VBoxContainer" type="VBoxContainer" parent="Foreground/MarginContainer/VBoxContainer/Network"]
margin_left = 3.0
margin_top = 2.0
margin_right = 1804.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer"]
margin_right = 1801.0
margin_bottom = 19.0
text = "global.loading.network"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer"]
margin_top = 23.0
margin_right = 1801.0
margin_bottom = 42.0

[node name="ContainerAuth" type="HBoxContainer" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer"]
margin_right = 341.0
margin_bottom = 19.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer/ContainerAuth"]
margin_right = 185.0
margin_bottom = 19.0
text = "global.loading.auth_status"

[node name="LabelAuth" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer/ContainerAuth"]
margin_left = 189.0
margin_right = 341.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.839216, 0.588235, 0, 1 )
text = "global.loading.wating"

[node name="ContainerFaction" type="HBoxContainer" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer"]
margin_left = 345.0
margin_right = 702.0
margin_bottom = 19.0
size_flags_horizontal = 3
alignment = 1

[node name="Label2" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer/ContainerFaction"]
margin_right = 201.0
margin_bottom = 19.0
text = "global.loading.faction_status"

[node name="LabelFaction" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer/ContainerFaction"]
margin_left = 205.0
margin_right = 357.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.839216, 0.588235, 0, 1 )
text = "global.loading.wating"

[node name="ContainerConstantes" type="HBoxContainer" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer"]
margin_left = 706.0
margin_right = 1082.0
margin_bottom = 19.0
size_flags_horizontal = 3
alignment = 1

[node name="Label3" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer/ContainerConstantes"]
margin_right = 220.0
margin_bottom = 19.0
text = "global.loading.constants_status"

[node name="LabelConstante" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer/ContainerConstantes"]
margin_left = 224.0
margin_right = 376.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.839216, 0.588235, 0, 1 )
text = "global.loading.wating"

[node name="ContainerShips" type="HBoxContainer" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer"]
margin_left = 1086.0
margin_right = 1431.0
margin_bottom = 19.0
size_flags_horizontal = 3
alignment = 1

[node name="Label4" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer/ContainerShips"]
margin_right = 189.0
margin_bottom = 19.0
text = "global.loading.ships_status"

[node name="LabelShips" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer/ContainerShips"]
margin_left = 193.0
margin_right = 345.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.839216, 0.588235, 0, 1 )
text = "global.loading.wating"

[node name="ContainerBuiilding" type="HBoxContainer" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer"]
margin_left = 1435.0
margin_right = 1801.0
margin_bottom = 19.0
size_flags_horizontal = 3
alignment = 1

[node name="Label4" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer/ContainerBuiilding"]
margin_right = 210.0
margin_bottom = 19.0
text = "global.loading.building_status"

[node name="LabelBuilding" type="Label" parent="Foreground/MarginContainer/VBoxContainer/Network/VBoxContainer/HBoxContainer/ContainerBuiilding"]
margin_left = 214.0
margin_right = 366.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.839216, 0.588235, 0, 1 )
text = "global.loading.wating"

[node name="Control3" type="Control" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 849.0
margin_right = 1807.0
margin_bottom = 899.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 903.0
margin_right = 1807.0
margin_bottom = 922.0
text = "global.loading.version %s"
valign = 1

[node name="Control4" type="Control" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 926.0
margin_right = 1807.0
margin_bottom = 936.0
rect_min_size = Vector2( 0, 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 940.0
margin_right = 1807.0
margin_bottom = 980.0
rect_min_size = Vector2( 0, 40 )

[node name="QuitButton" type="Button" parent="Foreground/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1807.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "global.loading.quit"

[node name="background" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.12244
margin_bottom = 1.12244
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerAuth" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="TimerResource" type="Timer" parent="."]
one_shot = true
autostart = true
